Enable compact object headers in Docker file.